# mtmex2part2

./: Auxiliaries.cpp  Auxiliaries.h  CMakeLists.txt  Character.cpp  Exceptions.h  Game.cpp  Game.h  Medic.cpp  Sniper.cpp  Sniper.h  autoGameTester.cpp  character.h  gameTest.cpp  medic.h  partC_tester.cpp  soldier.h
partA/: examDetails.cpp  examDetails.h  sortedList.h
partB/: Character.cpp  Exceptions.cpp  Exceptions.h  Medic.cpp  Medic.h  Sniper.h  Soldier.cpp  Soldier.h
tests/: game_output_1.txt  game_output_2.txt  game_output_3.txt  game_output_8.txt  game_output_9.txt
